# ChangeLog for Gentoo Linux Installer
# Copyright 2005 Gentoo Technologies, Inc.

dialogfe (05 Jan 2005):

  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Updated partition code to work with newer version of GLIStorageDevice.
  Updated set_network_mounts to work with separate netmounts structure in
  InstallProfile and fixed some bugs.

  16 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixing more bugs.  added dns server support.

  14 Mar 2005; Preston Cody <codeman@gentoo.org>
  second try on set gateway code.
  
  18 Feb 2005; Preston Cody <codeman@gentoo.org>
  added progress bar for install

  9 Feb 2005; Andrew Gaffney <agaffney@gentoo.org>
  a few tiny fixes to set_networking()
  
  7 Feb 2005; Scott Myron <samyron@gentoo.org>
  Added set_networking(), not tested.

  5 Feb 2005; Preston Cody <codeman@gentoo.org>
  added custom kernel and bootsplash options.  hope it works.
  
  26 Jan 2005; Preston Cody <codeman@gentoo.org>
  pretend now a runtime question.
  
  25 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed set_additional_users()

  22 Jan 2005; Preston Cody <codeman@gentoo.org>
  Finished initital coding of additional_users. more text detail.

  19 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added Group Membership for additional_users and fixed a [ instead of ( bug.

  15 Jan 2005; Andrew Gaffney <agaffney@gentoo.org>
  Commented out first while loop in install portion.

  14 Jan 2005; Preston Cody <codeman@gentoo.org>
  simple [ instead of { bug.

  07 Jan 2005; Preston Cody <codeman@gentoo.org>
  Added grp_install and services and fixed extra_packages to dialogfe

  05 Jan 2005; Preston Cody <codeman@gentoo.org>
  Initial ChangeLog commit. Getting the FE to interact with the CC correctly
  lots of issues still to be resolved here.  also added a README