@@ -3,6 +3,9 @@
 
 dialogfe (05 Jan 2005):
 
+  19 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Temporarily disabled 'emerge sync' option due to python threading bug.
+  
   19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Updated partition code to work with newer version of GLIStorageDevice.
   Updated set_network_mounts to work with separate netmounts structure in
